Fix image opacity on mobile

--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
       background-color: #111;
       color: #eee;
 	  background-image: url("assets/hhbg.png");
-	  background-blend-mode: overlay;
+/*	  background-blend-mode: overlay;*/
     }
 	h1, h2, h4 {
 	  font-size: 3vw;
